<resources>
    <string name="app_name">途途导由</string>
    <string name="app_name_test">途途导由Beta</string>
    <string name="appYuan">￥</string>
    <string name="appMinute">秒</string>
    <string name="appCity">市</string>
    <string name="appYuanC">元</string>
    <string name="appPerTime">/次</string>
    <string name="appScore">分</string>
    <string name="appUrlError">下载地址有误</string>
    <string name="appNew">新版本</string>
    <string name="appLatter">后</string>
    <string name="appDay">天</string>
    <string name="appSure">确定</string>
    <string name="appGet">至</string>
    <string name="appPeople">人</string>
    <string name="appHour">小时</string>
    <string name="appNoData">暂无更多的数据</string>
    <string name="mainTitle">途途导由</string>
    <string name="mainCheckZero">私人导游</string>
    <string name="mainCheckOne">景区讲解</string>
    <string name="mainCheckTwo">全民向导</string>
    <string name="mainCall">马上呼叫</string>
    <string name="mainCallGuide">马上呼叫附近导游</string>
    <string name="mainLoadHint">位置加载中..</string>
    <string name="mainNoGuide">附近暂无导游服务,可选择预约</string>
    <string name="mainNoServer">附近暂无讲解员为您服务</string>
    <string name="mainNoServerNative">附近暂无领路人为您服务</string>
    <string name="mainTokenLose">登陆失效，请重新登录</string>
    <string name="mainExitApp">再按一次退出程序</string>
    <string name="mainInputLocate">请选择位置</string>
    <string name="mainWaitServer">等待服务</string>
    <string name="mainStartServer">开始服务</string>
    <string name="mainStarTime">开始时间</string>
    <string name="mainMore">更多</string>
    <string name="mainCancelOrder">取消订单</string>
    <string name="mainService">联系客服</string>
    <string name="mainStartService">开始服务</string>
    <string name="mainStartServiceHint">您的服务人员已接到您,订单已经进入服务状态</string>
    <string name="mainSure">确认</string>
    <string name="mainChoiceResorts">请选择游玩的景区</string>
    <string name="mainSiChuan">四川</string>
    <string name="mainFeeTipOne">服务费按小时计算</string>
    <string name="mainFeeTipTwo">每小时超过15分钟后按1小时计算</string>
    <string name="mainFeeTipThree">费用约</string>
    <string name="mainCallSuccess">呼叫成功:</string>
    <string name="mainCallInRoad">服务人员正在途中请稍后</string>
    <string name="mainCallArrive">服务人员已到达，马上开始服务</string>
    <string name="mainServiceForUser">服务人员正在为您服务，请在服务后对服务人员作出评价</string>
    <string name="mainAppointGuide">预约</string>
    <string name="mainAppointLocate">目的地</string>
    <string name="mainAppointLocateCD">成都</string>
    <string name="mainAppointDate">选择出行日期</string>
    <string name="mainAppointDNum">选择游玩天数</string>
    <string name="mainAppointPNum">选择游玩人数</string>
    <string name="mainAppointStar">星级不限</string>
    <string name="mainAppointLanguage">普通话</string>
    <string name="mainAppointSex">性别不限</string>
    <string name="mainAppointMon">服务费不限</string>
    <string name="mainAppointNext">下一步：选择导游</string>
    <string name="mainAppointCancel">取消</string>
    <string name="mainAppointSure">确定</string>
    <string name="mainAppointDateTip">请设置正确的出游日期</string>
    <string name="mainAppointDateNull">请选择出行日期</string>
    <string name="mainAppointPNumNull">请选择游玩天数</string>
    <string name="guideCard">导游证</string>
    <string name="guidePerDay">/天</string>
    <string name="guideSelectTitle">选择导游</string>
    <string name="guideStar">星级</string>
    <string name="guideTripDate">出游日期</string>
    <string name="guideTripDateNum">出行天数</string>
    <string name="guideTripPNum">出行人数</string>
    <string name="guideTripScenic">游玩景区</string>
    <string name="guideAddGuider">添加/修改出行人</string>
    <string name="guideAddGuiderTip">请确保身份信息填写正确</string>
    <string name="guideUrgencyPeo">紧急联系人</string>
    <string name="guideUrgencyPName">联系人姓名</string>
    <string name="guideUrgencyPhone">手机号码</string>
    <string name="guideGuideNote">其他备注</string>
    <string name="guideGuideNoteTip">如有特殊需求，请在这里留言</string>
    <string name="guideGuideRead">我已阅读并接受</string>
    <string name="guideGuideReadKnow">预定须知、旅游合同等条款</string>
    <string name="guideGuideReadKnowCheck">请勾选</string>
    <string name="guidePrice">总价</string>
    <string name="guideSubmitAppoint">提交预约</string>
    <string name="guideAppointTitle">填写信息</string>
    <string name="guideSort">排序</string>
    <string name="guideSortDefault">默认</string>
    <string name="guideSortStar">星级优先</string>
    <string name="guideSortPriceH">价格最高</string>
    <string name="guideSortPriceL">价格最低</string>
    <string name="guideSortAgeH">年龄最高</string>
    <string name="guideSortAgeL">年龄最低</string>
    <string name="guideTraverTip">请填写出行人信息</string>
    <string name="guideTraverTip2">请确保出行人数和信息对应</string>
    <string name="guideContactsTip">请填写紧急联系人信息</string>
    <string name="guideJobTime">年工作经验</string>
    <string name="guideDetailTitle">导游详情</string>
    <string name="guideDetailCertNo">导游证</string>
    <string name="guideDetailScore">星级</string>
    <string name="guideDetailAlbum">Ta的相册</string>
    <string name="guideDetailNoAlbum">暂无相册</string>
    <string name="guideDetailComment">Ta的评价</string>
    <string name="guideDetailNoComment">暂无评价</string>
    <string name="guideDetailNotice">费用与预订须知</string>
    <string name="guideDetailOrder">预约</string>
    <string name="guideDetailJobTime">年经验</string>
    <string name="guideTraver">请选择常用游客</string>
    <string name="gChoiceTraver1">请选择</string>
    <string name="gChoiceTraver2">个常用游客</string>
    <string name="gTripFee">行程费用</string>
    <string name="gDetailLook">查看订单详情</string>
    <string name="gDetailPayTimed">付款剩余时间:</string>
    <string name="gDetailPayTo">去支付</string>
    <string name="gDetailYetPay">已支付</string>
    <string name="gDetailYetReservation">已预约</string>
    <string name="gDetailServiceIng">服务中</string>
    <string name="gDetailReservationFailTitle">预约失败</string>
    <string name="gDetailCancelTip">确认取消该订单吗？</string>
    <string name="gDetailCancelNo">暂不取消</string>
    <string name="gDetailCancelFee">取消费</string>
    <string name="gDetailRefundFeeTip">退款金额</string>
    <string name="gDetailRefundFeeTitle">退款费用</string>
    <string name="gDetailRefundFeeTips">退款将在1-3个工作日原路退回您的支付账户中</string>
    <string name="gDetailComplaints">投诉</string>
    <string name="gDetailReservationFail">您预约的导游无法接单\n退款将在1-3个工作日原路返回</string>
    <string name="gCancelTitle">取消订单</string>
    <string name="gCancelReason">取消原因</string>
    <string name="gCancelReasonChoice">请选择取消原因</string>
    <string name="gCancelReasonComplain">取消订单说明</string>
    <string name="gCancelRefund">退款金额:</string>
    <string name="gCancelRefundRule">取消退款规则</string>
    <string name="gCancelRefundRule1"></string>
    <string name="gCancelSure">确认取消</string>
    <string name="menuOrder">我的订单</string>
    <string name="menuMsg">消息中心</string>
    <string name="menuFeedBack">意见反馈</string>
    <string name="menuAboutUs">关于我们</string>
    <string name="menuCoupons">优惠券</string>
    <string name="menuFind">招募</string>
    <string name="menuSetting">设置</string>
    <string name="callTitle">确认呼叫</string>
    <string name="callRealName">真实姓名</string>
    <string name="callRealNameHint">请输入您的真实姓名</string>
    <string name="callChoiceInsurer">请选择被保人</string>
    <string name="callIdCard">身份证号</string>
    <string name="callIdCardHint">请输入身份证号,为您免费购买意外保险</string>
    <string name="callSex">性别</string>
    <string name="callPhone">联系电话</string>
    <string name="choiceInsurer">添加/变更游客</string>
    <string name="callInsuranceHint">我们免费为您购买价值10万元意外险</string>
    <string name="callPriceTip">/小时×服务时间</string>
    <string name="callInsuranceDetail">详细说明>>></string>
    <string name="callSingleHour">/小时</string>
    <string name="callAttention">提醒:</string>
    <string name="callAttentionOne">1.领路人开始服务即开始计时;</string>
    <string name="callAttentionTwo">2.服务费起步价</string>
    <string name="callAttentionThree">3.服务费按小时计算，每小时超过15分钟后按1小时计算。</string>
    <string name="callOrder">正在呼叫中</string>
    <string name="callLongPress">长按取消呼叫</string>
    <string name="callTripScenic">游玩景区</string>
    <string name="callTripLanguage">普通话</string>
    <string name="callTripHour">按小时</string>
    <string name="callTripTimes">按次数</string>
    <string name="callTripPerYuan">元/小时</string>
    <string name="callTripPerTimes">元/次</string>
    <string name="nCallNickName">您的昵称</string>
    <string name="nCallNickNameHint">讲解员怎么称呼您</string>
    <string name="nCallChoiceWay">选择服务方式</string>
    <string name="nCallSingleTime">元/次</string>
    <string name="nCallSingleHour">元/小时</string>
    <string name="nCallPriceHour">/小时×服务时间</string>
    <string name="nCallPriceTime">一口价￥</string>
    <string name="nCallTimeService">单次服务\n享受标准服务待遇</string>
    <string name="nCallHourService">根据服务时间计费\n享受贵宾自由控制待遇</string>
    <string name="nCallAttentionOne">1.讲解员开始服务即开始计时;</string>
    <string name="nCallAttentionTwo">2.服务费起步价</string>
    <string name="nCallAttentionThree">3.服务费按小时计算，每小时超过15分钟后按1小时计算。</string>
    <string name="nCallAttentionFour">1.讲解员开始服务即开始本次服务;</string>
    <string name="nCallAttentionFive">2.根据景区规定对所有景点提供讲解服务;</string>
    <string name="nCallAttentionSix">3.服务时间不超过3小时。</string>
    <string name="nCallNameHint">请输入您的昵称</string>
    <string name="nCallPhone">请输入您的联系电话</string>
    <string name="nCallHourTip">讲解员开始服务即开始计时,服务费按小时计算,起步价60元,每小时超过15分钟后按1小时计算</string>
    <string name="nCallTimesTip">讲解员开始服务即开始本次服务,服务费按小时计算,根据景区规定所有对所有景区提供讲解服务</string>
    <string name="nCallImmediate">马上呼叫</string>
    <string name="nCallTripPNum">选择游玩人数</string>
    <string name="sexMale">男</string>
    <string name="sexFemale">女</string>
    <string name="sexCancel">取消</string>
    <string name="oLTitle">我的订单</string>
    <string name="oLInService">服务中</string>
    <string name="oLMoney">￥</string>
    <string name="oLOrderNum">订单编号:</string>
    <string name="oLOrderNarrator">讲</string>
    <string name="oLOrderNative">领</string>
    <string name="oLOrderGuide">导</string>
    <string name="oLOrderGoing">进行中</string>
    <string name="oLOrderPay">待支付</string>
    <string name="oLOrderComment">待评论</string>
    <string name="oLOrderFinish">已完成</string>
    <string name="oLOrderCancelPay">待支付</string>
    <string name="oLOrderClose">已取消</string>
    <string name="oLOrderClosed">已关闭</string>
    <string name="aboutUsTitle">关于我们</string>
    <string name="aboutUsHotLine">服务热线:028-83187791</string>
    <string name="aboutUsWebsite">官方网站:www.xbx121.com</string>
    <string name="aboutUsCooperation">商务合作:kefu@xbx121.com</string>
    <string name="cancelOrderHint1">服务人员正在急速奔跑中</string>
    <string name="cancelOrderHint2">再等一会吧</string>
    <string name="cancelOrderHint3">5分钟内</string>
    <string name="cancelOrderHint4">免费取消</string>
    <string name="cancelOrderHint5">订单,超过5分钟取消收取</string>
    <string name="cancelOrderHint6">10元取消费</string>
    <string name="cancelOrderNo">暂不取消</string>
    <string name="cancelOrderYes">确认取消</string>
    <string name="insurerFinish">保存</string>
    <string name="insurerMsg">中文姓名</string>
    <string name="insurerCardType">证件类型</string>
    <string name="insurerMsgHint">与证件上保持一致</string>
    <string name="insurerIdCard">身份证号</string>
    <string name="insurerIdCardHint">与证件上保持一致</string>
    <string name="insurerPhone">联系电话</string>
    <string name="insurerPhoneHint">请填写手机号码</string>
    <string name="invoiceCompany">公司抬头</string>
    <string name="invoiceCompanyHint">请填写公司抬头</string>
    <string name="invoiceMsg">发票内容</string>
    <string name="invoiceMsgHint">旅游服务费</string>
    <string name="invoiceMoney">发票金额</string>
    <string name="invoiceGive">收件人</string>
    <string name="invoiceGiveHint">请填写收件人</string>
    <string name="invoicePhone">联系电话</string>
    <string name="invoiceAddr">详细地址</string>
    <string name="invoiceAddressHint">请填写详细地址</string>
    <string name="invoiceSubmit">提交</string>
    <string name="fContactsTitleSave">保存</string>
    <string name="fContactsName">中文姓名</string>
    <string name="fContactsNameTip">请填写你的姓名</string>
    <string name="fContactsPhone">联系电话</string>
    <string name="fContactsPhoneTip">请填写手机号码</string>
</resources>